corpus/iloc.txt
==================
single cell
==================

players{1}

---

(expr (selection
  (table
    (identifier))
  (row_iloc (int))))

==================
slice
==================

players{1:10, 10:100}

---

(expr expr: (selection
  table: (table (identifier))
  select: (df_iloc
    row_iloc: (int_slice 
      begin: (int)
      end: (int))
    col_iloc: (int_slice 
      begin: (int)
      end: (int)))))

==================
slice all
==================

players{:, :}

---

(expr (selection
  (table (identifier))
  (df_iloc
    (int_slice)
    (int_slice))))

==================
slice from begin
==================

players{:10, :9}

---

(expr expr: (selection 
  table: (table (identifier))
  select: (df_iloc
    row_iloc: (int_slice
      end: (int))
    col_iloc: (int_slice
      end: (int)))))

==================
slice until last
==================

players{3:, 1:}

---

(expr expr: (selection
  table: (table (identifier))
  select: (df_iloc
    row_iloc: (int_slice
      begin: (int))
    col_iloc: (int_slice
      begin: (int)))))

==================
list
==================

players{[0,1], [3]}

---

(expr (selection
  (table (identifier))
  (df_iloc
    (int_list (int) (int))
    (int_list (int)))))
